--- a/prs/Dockerfile
+++ b/prs/Dockerfile
@@ -13,6 +13,11 @@ RUN pip3 install cget click
 # R stuff
 RUN R -f /tmp/install.R
 RUN chown -R rstudio /home/rstudio/
+#bug fixes for permissions issues
+RUN rm /var/lib/rstudio-server/rstudio.sqlite
+RUN chmod -R g=u /var/lib/rstudio-server
+RUN chmod -R g=u /etc/rstudio
+
 USER rstudio
 
 # invalidates cache every 24 hours
