--- a/prs/docker-compose.yml
+++ b/prs/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 8788:8787
     environment:
-      PASSWORD: "InDNAWeTrust"
+      PASSWORD: "InDNAWeTrust!"
     volumes:
       - /data/public/prs:/home/rstudio
     labels:
